Row Range Option
- Modified data-refiner.css: Added styling for options within the data refiner.
- Modified data-refiner.js: Added functions that support row ranges to permit a user to limit the length of the dataset that they choose. Also made it so that empty rows are removed.
- Modified stylesheet.css: Changed up some colors.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#analysis">
                             <p>Data Analysis</p>
                         </a>
                     </li>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="section">
-            
+                <a name="analysis"></a>
             </div>
             <div class="section">
             
