--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <nav class="flex-row">
             <img src="images/icons/mu256x256.png" height=40>
             <p>NHS Cosmic Ray Team</p>
+            <a href="/docs"><p>Docs</p></a>
         </nav>
         <div id="main-content">
             <div class="bg" data-layer=0>
@@ -99,6 +100,8 @@
     <script src="js/ui.js"></script>
     <script src="js/file-chooser.js"></script>
     <script src="js/brand-buttons.js"></script>
+    
+    <script src="js/vernier-generation.js"></script>
     
     <script src="js/data-refiner.js"></script>
     <script src="js/data-analyzer.js"></script>
