--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="flex-row">
             <img src="images/icons/mu256x256.png" height=40>
             <p>NHS Cosmic Ray Team</p>
-            <a href="/docs"><p>Docs</p></a>
+            <a href="docs"><p>Docs</p></a>
         </nav>
         <div id="main-content">
             <div class="bg" data-layer=0>
