--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div name="data-refiner" class="section flex-column">
                 <a name="refine"></a>
                 <div class="panel">
-                    <header class="flex-row">Dataset Refiner</header>
+                    <header class="flex-row" data-documentation="docs/refinement">Dataset Refiner</header>
                     <div class="flex-row-center actions">
                         <button type="button" onclick="overlay('choose-file', 'loadDatasetsRefiner');">Choose File</button>
                     </div>
@@ -64,7 +64,7 @@
             <div name="data-analyzer" class="section flex-column">
                 <a name="analysis"></a>
                 <div class="panel">
-                    <header class="flex-row">Dataset Analyzer</header>
+                    <header class="flex-row" data-documentation="docs/analysis">Dataset Analyzer</header>
                     <div class="flex-row-center actions">
                         <button type="button" onclick="overlay('choose-file', 'loadDatasetsAnalyzer');">Choose File</button>
                     </div>
