--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <!DOCTYPE>
 <html>
     <head>
-        <title>NHS Cosmic Ray Team</title>
+        <title>cData - NHS Cosmic Ray Team</title>
         <link rel="icon" href="images/icons/mu256x256.png">
         
         <!-- !-->
         <meta charset="UTF-8">
-        <meta name="description" content="An analysis tool for data obtained from the NHS Cosmic Ray Team.">
-        <meta name="keywords" content="cosmic, ray, nhs, analysis">
+        <meta name="description" content="An analysis tool for data obtained by the NHS Cosmic Ray Team.">
+        <meta name="keywords" content="cdata, cosmic, ray, nhs, analysis">
         <meta name="author" content="NHS Cosmic Ray Team">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
@@ -28,7 +28,7 @@
     <body>
         <nav class="flex-row">
             <img src="images/icons/mu256x256.png" height=40>
-            <p>NHS Cosmic Ray Team</p>
+            <p>cData</p>
             <a href="docs"><p>Docs</p></a>
         </nav>
         <div id="main-content">
