Multiple Files and Header Bugs
- Modified data-refiner.js: Added code for dealing with files that don't have headers, as well as fixing problems with processing and exporting multiple files. Also added code to deal with headers inserted into the middle of files by the cosmic ray file upload code.
- Modified data-refiner.css: Added styling for data refiner warnings.
- Modified refinement.md: Added documentation for warnings in the data refinement tool.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="panel">
                     <header class="flex-row" data-documentation="docs/refinement">Dataset Refiner</header>
                     <div class="flex-row-center actions">
-                        <button type="button" onclick="overlay('choose-file', 'loadDatasetsRefiner');">Choose File</button>
+                        <button name="choose-file" type="button" onclick="overlay('choose-file', 'loadDatasetsRefiner');">Choose File</button>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
         </div>
         
         <footer class="flex-row-center">
-            <a target="_blank" class="flex-row-center" href="https://www.github.com/NHS-Cosmic-Ray-Team/Data-Analysis-Application"><p>Hosted with ❤️ on Github</p></a>
+            <a target="_blank" class="flex-row-center" href="https://www.github.com/NHS-Cosmic-Ray-Team/cData"><p>Hosted with ❤️ on Github</p></a>
         </footer>
     </body>
         
