--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <script src="js/libs/Chart.min.js"></script>
     <script src='https://unpkg.com/simple-statistics@7.3.0/dist/simple-statistics.min.js'></script>
     <script src="js/libs/math.js"></script>
+    <script src="js/libs/bignumber.min.js"></script>
     
     <script src="js/ui.js"></script>
     <script src="js/file-chooser.js"></script>
